[package]
name = "arctis7ctl"
version = "0.0.1"
authors = ["mopemope <yutaka.matsubara@gmail.com>"]
description = ""
keywords = ["tool"]
homepage = "https://github.com/mopemope/arctis7ctl"
repository = "https://github.com/mopemope/arctis7ctl"
readme = "README.md"
license = "GPL3"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"] }
anyhow = "1"
regex = "1.2"
lazy_static = "1.2"
log = "0.4"
env_logger = "0.9"
console = "0.15"
libc = "0.2"
toml = "0.5.3"
serde = "1"
serde_derive = "1"
serde_json = "1"
nix = "0.23"
rusb = "0.9"